adding endpoint to find user spots. and documentations
